--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/app.js",
+      "src": "./src/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/.*",
-      "dest": "/src/app.js"
+      "dest": "/src/server.js"
     }
   ],
   "env": {
