--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/.*",
+      "src": "/(.*)",
       "dest": "/src/server.js"
     }
   ],
@@ -16,3 +16,4 @@
     "NODE_ENV": "production"
   }
 }
+j
