--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,18 +1,16 @@
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "./src/server.js",
+      "src": "knexfile.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/src/server.js"
+      "src": "/.*",
+      "dest": "/knexfile.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
