Returning back to routing to app file.

--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,16 +1,18 @@
-
 {
   "version": 2,
   "builds": [
     {
-      "src": "knexfile.js",
+      "src": "./src/app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/.*",
-      "dest": "knexfile.js"
+      "dest": "/src/app.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
